spacing fix

--- a/wp-content/themes/known_starter/src/sass/partials/_hero.scss
+++ b/wp-content/themes/known_starter/src/sass/partials/_hero.scss
@@ -50,7 +50,7 @@
         }
       }
 
-      .photo-curve-horiz {
+      #photo-curve-horiz {
         position: absolute;
         display: none;
         @media screen and (min-width: 768px){
@@ -61,10 +61,10 @@
         }
       }
 
-      .photo-curve-vert {
+      #photo-curve-vert {
         position: absolute;
         display: block;
-        bottom: 0; 
+        bottom: 0;
         @media screen and (min-width: 768px){
           display: none;
         }
