--- a/wp-content/themes/known_starter/src/sass/partials/_next-steps.scss
+++ b/wp-content/themes/known_starter/src/sass/partials/_next-steps.scss
@@ -17,14 +17,6 @@
         flex-direction: row;
       }
 
-      .page-path {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: 999;
-        top: 0;
-      }
-
       .inner {
         display: block;
         margin: 0 auto;
@@ -34,6 +26,15 @@
           width: 50%;
           margin: 0;
           position: relative;
+        }
+
+        .page-path {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 999;
+          top: 0;
         }
 
         #next-step-label {
@@ -78,6 +79,16 @@
         @media screen and (min-width: 768px){
           width: 50%;
           height: 100%;
+          position: relative;
+        }
+
+        .page-path {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 999;
+          top: 0;
         }
 
         img {
