--- a/wp-content/themes/known_starter/src/style.css
+++ b/wp-content/themes/known_starter/src/style.css
@@ -806,21 +806,21 @@ body.mobile-nav-active #hamburger g#hamburger_paths {
           .hero .inner .hero-img-wrapper img {
             height: 100%;
             width: 100%; } }
-      .hero .inner .hero-img-wrapper .photo-curve-horiz {
+      .hero .inner .hero-img-wrapper #photo-curve-horiz {
         position: absolute;
         display: none; }
         @media screen and (min-width: 768px) {
-          .hero .inner .hero-img-wrapper .photo-curve-horiz {
+          .hero .inner .hero-img-wrapper #photo-curve-horiz {
             display: block;
             right: 0;
             bottom: 0;
             height: 100%; } }
-      .hero .inner .hero-img-wrapper .photo-curve-vert {
+      .hero .inner .hero-img-wrapper #photo-curve-vert {
         position: absolute;
         display: block;
         bottom: 0; }
         @media screen and (min-width: 768px) {
-          .hero .inner .hero-img-wrapper .photo-curve-vert {
+          .hero .inner .hero-img-wrapper #photo-curve-vert {
             display: none; } }
     .hero .inner .hero-text-wrapper {
       padding: 2rem;
@@ -2245,12 +2245,6 @@ body.mobile-nav-active #hamburger g#hamburger_paths {
         -webkit-box-direction: normal;
             -ms-flex-direction: row;
                 flex-direction: row; } }
-    .next-step-wrapper .next-step-container .page-path {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      z-index: 999;
-      top: 0; }
     .next-step-wrapper .next-step-container .inner {
       display: block;
       margin: 0 auto;
@@ -2263,6 +2257,13 @@ body.mobile-nav-active #hamburger g#hamburger_paths {
           width: 50%;
           margin: 0;
           position: relative; } }
+      .next-step-wrapper .next-step-container .inner .page-path {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: block;
+        z-index: 999;
+        top: 0; }
       .next-step-wrapper .next-step-container .inner #next-step-label {
         color: #fff;
         letter-spacing: .2rem;
@@ -2303,7 +2304,15 @@ body.mobile-nav-active #hamburger g#hamburger_paths {
       @media screen and (min-width: 768px) {
         .next-step-wrapper .next-step-container #next-step-img {
           width: 50%;
-          height: 100%; } }
+          height: 100%;
+          position: relative; } }
+      .next-step-wrapper .next-step-container #next-step-img .page-path {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: block;
+        z-index: 999;
+        top: 0; }
       .next-step-wrapper .next-step-container #next-step-img img {
         height: 100%;
         max-height: 35rem;
